--- a/styl.css
+++ b/styl.css
@@ -142,3 +142,76 @@ main#board .empty:hover {
 #reload {
   cursor: pointer;
 }
+.endPage {
+  visibility: hidden;
+  position: absolute;
+  top: 0px;
+  right: calc(50% - 150px);
+  transition: all 1s ease-out;
+}
+.endPage.active {
+  visibility: visible;
+  transform: translateY(170px);
+}
+.wynikWin {
+  width: 300px;
+  height: 220px;
+  background-color: #4dc1f9;
+  position: relative;
+  border-radius: 20px;
+  display: none;
+}
+.wynikLoose {
+  width: 300px;
+  height: 220px;
+  background-color: #4dc1f9;
+  position: relative;
+  border-radius: 20px;
+  display: none;
+}
+.zagraj {
+  width: 300px;
+  height: 70px;
+  background-color: green;
+  position: relative;
+  top: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.zagraj > p {
+  margin-left: 20px;
+}
+#dimmer {
+  background-color: rgba(0, 0, 0, 0.493);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+.smile {
+  width: 90px;
+  height: 90px;
+  margin: 0px auto;
+  padding-top: 20px;
+}
+.icon2 {
+  display: inline-block;
+  width: 45px;
+  height: 45px;
+  margin-top: 35px;
+  margin-left: 85px;
+  border: 1px solid black;
+}
+.info.clock {
+  margin-left: 90px;
+  margin-top: -10px;
+}
+#timeScore {
+  margin-left: 35px;
+  font-size: 35px;
+}
+.playAgain {
+  margin-left: 30px;
+}
